# prot-browser-tui

./: LICENSE  pyproject.toml
src/prot_browser_tui/: __init__.py  app.py
src/prot_browser_tui/api/: __init__.py  helpers.py  proteins.py
src/prot_browser_tui/screens/: __init__.py  browse.py  helpers.py  ui.tcss
tests/: __init__.py  conftest.py  test_proteins.py
