[project]
name = "prot-browser-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy", email = "andymucyo@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "blessed>=1.45.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "rich>=15.0.0",
    "textual-dev>=1.8.0",
]

[project.scripts]
app = "prot_browser_tui.app:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[tool.ruff]
line-length = 79

[tool-ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
